картинки заработали! ! добавили классы для картинок, чтобы они не прилипали к логотипу и стили применялись только к ним, а логотип не менялся

--- a/DjangoWebProject1/app/static/app/content/site.css
+++ b/DjangoWebProject1/app/static/app/content/site.css
@@ -95,3 +95,10 @@ input[type="checkbox"].input-validation-error {
     .resource-link span {
         font-size: 16px;
     }
+
+.custom-img {
+    width: 300px; /* Фиксированная ширина */
+    height: auto; /* Автоматическая высота */
+    display: block;
+    margin: 10px 0;
+}
