--- a/DjangoWebProject1/app/templates/app/anketa.html
+++ b/DjangoWebProject1/app/templates/app/anketa.html
@@ -29,12 +29,12 @@
     <li><span>Имя: </span> {{ data.name }}</li>
     <li><span>Город: </span> {{ data.city }}</li>
     <li><span>Пол:</span> {{ data.gender }}</li>
-    <li><span>Ваш род занятий: </span> {{ data. job }}</li>
+    <li><span>Ваш род занятий: </span> {{ data.job }}</li>
     <li> <span>Получать новости сайта на e-mail:</span> 
         {{data.notice }}
     </li>
-    <li><span>Baш e-mail:</span> {{ data.email }}</li>
-    <li><span>Информация о себе: </span> {{ data.message }}</li>
+    <li><span>Baш e-mail(для связи с Вами):</span> {{ data.email }}</li>
+    <li><span>Информация о Вас и Ваших предпочтениях и пожеланиях: </span> {{ data.message }}</li>
 </ul>
 {% endif %}
 {% endblock %}
