--- a/DjangoWebProject1/app/templates/app/layout.html
+++ b/DjangoWebProject1/app/templates/app/layout.html
@@ -31,6 +31,9 @@
                     <li><a href="{% url 'contact' %}">Контакты</a></li>
                     <li><a href="{% url 'links' %}">Полезные ресурсы</a></li>
                     <li><a href="{% url 'anketa' %}">Отзыв</a></li>
+                    {% if not user.is_authenticated %}
+                    <li><a href="{% url 'registration' %}">Регистрация</a></li>
+                    {% endif %}
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
