--- a/DjangoWebProject1/app/static/app/content/site.css
+++ b/DjangoWebProject1/app/static/app/content/site.css
@@ -102,3 +102,10 @@ input[type="checkbox"].input-validation-error {
     display: block;
     margin: 10px 0;
 }
+.back-link, .read_more {
+    color: #FF6666; /*меняем цвет для кнопки "назад"*/
+}
+.back-link:hover, .read_more:hover {
+    color: palevioletred
+    }
+
