--- a/DjangoWebProject1/app/templates/app/layout.html
+++ b/DjangoWebProject1/app/templates/app/layout.html
@@ -34,6 +34,7 @@
                     {% if not user.is_authenticated %}
                     <li><a href="{% url 'registration' %}">Регистрация</a></li>
                     {% endif %}
+                    <li><a href="{% url 'blog' %}">Блог</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
