Реализовали на отдельной веб-странице сайта добавление статей блога администратором, добавили возможность добавить картинку в начало статьи блога

--- a/DjangoWebProject1/app/templates/app/layout.html
+++ b/DjangoWebProject1/app/templates/app/layout.html
@@ -35,6 +35,9 @@
                     <li><a href="{% url 'registration' %}">Регистрация</a></li>
                     {% endif %}
                     <li><a href="{% url 'blog' %}">Блог</a></li>
+                    {% if user.is_superuser %}
+                    <li><a href="{% url 'newpost' %}">Добавить статью</a></li>
+                    {% endif %}
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
