--- a/DjangoWebProject1/app/templates/app/blogpost.html
+++ b/DjangoWebProject1/app/templates/app/blogpost.html
@@ -3,6 +3,12 @@
 {% block content %}
 
 <h2> {{post_1.title}} </h2>
+{% if post_1.image and post_1.image.url != '/media/temp.jpg' %}
+
+<img src="{{ post_1.image.url }}" alt=" Картинка статьи блога" />
+
+{% endif %}
+
 <p> {{post_1.content|linebreaksbr}} </p>      {# вывод текста по абзацам#}
 
 {% if user.is_authenticated %}
