--- a/DjangoWebProject1/app/templates/app/layout.html
+++ b/DjangoWebProject1/app/templates/app/layout.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -29,15 +29,16 @@
                     <li><a href="{% url 'home' %}">Главная</a></li>
                     <li><a href="{% url 'about' %}">О нас</a></li>
                     <li><a href="{% url 'contact' %}">Контакты</a></li>
-                    <li><a href="{% url 'links' %}">Полезные ресурсы</a></li>
+                    <li><a href="{% url 'links' %}">Полезное</a></li>
                     <li><a href="{% url 'anketa' %}">Отзыв</a></li>
                     {% if not user.is_authenticated %}
                     <li><a href="{% url 'registration' %}">Регистрация</a></li>
                     {% endif %}
                     <li><a href="{% url 'blog' %}">Блог</a></li>
                     {% if user.is_superuser %}
-                    <li><a href="{% url 'newpost' %}">Добавить статью</a></li>
+                    <li><a href="{% url 'newpost' %}">Новая статья</a></li>
                     {% endif %}
+                    <li><a href="{% url 'videopost' %}">Видео</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
