новая версия сайтика кондитерской

--- a/DjangoWebProject1/app/templates/app/index.html
+++ b/DjangoWebProject1/app/templates/app/index.html
@@ -9,7 +9,7 @@
     <p class="lead">
         Мы рады приветствовать вас в нашей уютной кондитерской, где каждый десерт создается с любовью и вниманием к деталям. Пусть ваш день станет слаще и ярче с нами!
     </p>
-    <p><a href="https://www.example.com/" class="btn btn-primary btn-large">Посмотреть меню &raquo;</a></p>
+    <p><a href="{% url 'catalog' %}" class="btn btn-primary btn-large">Посмотреть меню &raquo;</a></p>
 </div>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
