--- a/DjangoWebProject1/app/templates/app/layout.html
+++ b/DjangoWebProject1/app/templates/app/layout.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -25,6 +25,7 @@
                 <a href="/" class="navbar-brand"> <img src="{% static 'app/content/logo.png' %}" alt="logo" /> </a>
             </div>
             <div class="navbar-collapse collapse">
+                {% load custom_filters %}
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'home' %}">Главная</a></li>
                     <li><a href="{% url 'about' %}">О нас</a></li>
@@ -38,25 +39,31 @@
                     {% if user.is_superuser %}
                     <li><a href="{% url 'newpost' %}">Новая статья</a></li>
                     {% endif %}
-                    <li><a href="{% url 'videopost' %}">Видео</a></li>
+                    {% if  user.is_authenticated %}
+                    <li><a href="{% url 'my_orders' %}">Мои заказы</a></li>
+                    {% endif %}
+                    {% if user.is_superuser or user|in_group:'Менеджер' %}
+                    <li><a href="{% url 'manager_orders' %}">Заказы</a></li>
+                    {% endif %}
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
         </div>
     </div>
 
+
     <div class="container body-content">
-{% block content %}{% endblock %}
-        <hr/>
+        {% block content %}{% endblock %}
+        <hr />
         <footer>
             <p>&copy; {{ year }} - Purrfect Sweets</p>
         </footer>
     </div>
 
-   
+
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
-{% block scripts %}{% endblock %}
+    {% block scripts %}{% endblock %}
 
 </body>
 </html>
